     on 1 object.

  3. Add configuration properties to control batching of copy operations
     separately from other operations:

       fs.gs.copy.max.requests.per.batch (default: 30)
       fs.gs.copy.batch.threads (default: 0)

  4. Fix `RejectedExecutionException` during parallel execution of GCS batch
     requests.


1.6.7 - 2018-06-12

  1. Remove Hadoop3 support.

  2. Add interface through which user can directly provide the access token.

  3. Update Hadoop dependencies to 2.8.4 version.

  4. Add more retries and error handling in GoogleCloudStorageReadChannel,
     to make it more resilient to network errors; also add a property to allow users
     to specify number of retries on low level GCS HTTP requests in case of server
     errors and I/O errors.

  5. Add properties to allow users to specify connect timeout and read timeout on
     low level GCS HTTP requests.

  6. Include prefix/directory objects metadata into `storage.objects.list`
     requests response to improve performance (i.e. set
     `includeTrailingDelimiter` parameter for `storage.objects.list` GCS
     requests to `true`).


1.6.6 - 2018-05-08

  1. Support Hadoop 3.

  2. Change Maven project structure to be better compatible with IDEs.

  3. Fix thread leaks that were occurring when YARN log aggregation uploaded
     logs to GCS.


1.6.5 - 2018-04-12

  1. Add support for using Cloud Storage Rewrite requests for copy operation:

       fs.gs.copy.with.rewrite.enable (default: false)

     This allows to copy files between different locations and storage classes.

  2. Update all dependencies to latest versions.

  3. Decrease default value for max requests per batch from 1,000 to 30.

  4. Make max requests per batch value configurable with property:

       fs.gs.max.requests.per.batch (default: 30)


1.6.4 - 2018-03-19

  1. Fixed an issue where JSON auth files containing user auth e.g.
     application_default_credentials.json does not work with